<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/gray1"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/engineering_consultances"
                android:textColor="@color/yellow1"

                />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/ic_left_arrow" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:text="@string/provide_us_with_info2"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:text="@string/property_type"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"

                android:background="@drawable/linear_shape"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <Spinner
                    android:id="@+id/sp_container_size"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/spinner">

                </Spinner>
            </LinearLayout>

            <EditText
                android:id="@+id/edittext_area"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/linear_shape"
                android:hint="@string/area"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/property_image"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/linear_shape">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/r_imageview_property"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:riv_border_width="1dp"
                    app:riv_corner_radius="10dp" />

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:padding="30dp"
                    android:src="@drawable/ic_upload"

                    />
            </FrameLayout>

            <EditText
                android:id="@+id/edittext_details"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/linear_shape"
                android:gravity="top"
                android:hint="@string/details_of_the_reference"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:inputType="textMultiLine"
                />

            <Button
                android:id="@+id/button_order"
                android:layout_width="180dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_shape"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>