<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout

            android:id="@+id/lin_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/linear_shape"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/txt_title">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:backgroundTint="#fff"
                android:padding="5dp"
                android:src="@drawable/ic_user"

                />

            <EditText
                android:id="@+id/name_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/name"
                android:singleLine="true"
                android:textSize="15sp"
                />


        </LinearLayout>


        <EditText
            android:id="@+id/txt_info"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/linear_shape"
            android:gravity="top"
            android:hint="@string/information"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:padding="5dp"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/lin_name"
            />
        <LinearLayout
            android:id="@+id/lin_services"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/linear_shape"
            app:layout_constraintTop_toBottomOf="@+id/txt_info"
            >
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="35dp"
                />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="35dp"
                />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="35dp"
                style="@style/Check"
                />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="35dp"

                />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="35dp"
                />
        </LinearLayout>
        <Button
            android:id="@+id/com"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="120dp"
            android:layout_marginLeft="120dp"
            android:background="@drawable/button_shape"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/lin_services"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
