<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray0"
    android:clickable="true"
    android:focusable="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/too2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back1"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:clickable="false"
            android:longClickable="false"
            android:padding="13dp"
            android:src="@drawable/ic_right_arrow"
            android:tint="@color/yellow1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/contact_us"
            android:textColor="@color/yellow1"
            android:textSize="16sp"

            />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/too2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/contaact_us_txt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/user_Full_name"
                android:textColor="@color/yellow1"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/name_contact"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/linear_shape"
                app:layout_constraintTop_toBottomOf="@+id/contaact_us_txt1" />

            <TextView
                android:id="@+id/contact_us_txt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/user_email"
                android:textColor="@color/yellow1"
                app:layout_constraintTop_toBottomOf="@+id/name_contact" />

            <EditText
                android:id="@+id/email_contact"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/linear_shape"
                android:inputType="textEmailAddress"
                android:textColor="@color/yellow1"
                app:layout_constraintTop_toBottomOf="@+id/contact_us_txt2" />

            <TextView
                android:id="@+id/contact_us_txt3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/Message"
                android:textColor="@color/yellow1"
                app:layout_constraintTop_toBottomOf="@+id/email_contact" />

            <EditText
                android:id="@+id/message_contact"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5.0dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/linear_shape"
                android:gravity="top"
                android:paddingLeft="5.dp"
                android:paddingRight="5dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/contact_us_txt3" />

            <Button
                android:id="@+id/send"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="45dp"
                android:background="@drawable/button_shape"
                android:gravity="center"
                android:text="@string/call"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/message_contact" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>