<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activites_Fragments.Fragments.Fragment_Upgrade_To_Company"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/gray0"
    android:clickable="true"
    android:focusable="true"
    >

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/too1"
        app:layout_constraintTop_toTopOf="parent"
        >


        <ImageView
            android:id="@+id/cart"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/logo_login"
            android:padding="5dp"
            />
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/home"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/yellow1"
            />
        <ImageView
            android:id="@+id/back_home"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_left_arrow"
            android:padding="10dp"
            android:layout_gravity="end"

            />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/too1"
       >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout

                android:id="@+id/lin_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/linear_shape"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/txt_title">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:backgroundTint="#fff"
                    android:padding="5dp"
                    android:src="@drawable/ic_user"

                    />

                <EditText
                    android:id="@+id/name_signup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:hint="@string/name"
                    android:singleLine="true"
                    android:textSize="15sp"
                    />


            </LinearLayout>


            <EditText
                android:id="@+id/txt_info"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@drawable/linear_shape"
                android:gravity="top"
                android:hint="@string/information"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:padding="5dp"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/lin_name"
               />
 <LinearLayout
     android:id="@+id/lin_services"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_marginTop="8dp"
     android:layout_marginLeft="15dp"
     android:layout_marginRight="15dp"
     android:background="@drawable/linear_shape"
     app:layout_constraintTop_toBottomOf="@+id/txt_info"
     >
<CheckBox
    android:layout_width="match_parent"
    android:layout_height="35dp"
    android:buttonTint="@color/yellow1"
    />
     <CheckBox
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:buttonTint="@color/yellow1"
         />
     <CheckBox
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:buttonTint="@color/yellow1"
         />
     <CheckBox
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:buttonTint="@color/yellow1"
         />
     <CheckBox
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:buttonTint="@color/yellow1"
         />
 </LinearLayout>
            <Button
                android:id="@+id/com"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="120dp"
                android:layout_marginLeft="120dp"
                android:background="@drawable/button_shape"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/lin_services"
                app:layout_constraintBottom_toBottomOf="parent"
                 />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>